fix: documentation navigation jumping

--- a/documentation/src/styles/theme.css
+++ b/documentation/src/styles/theme.css
@@ -77,11 +77,13 @@ h6,
 }
 .sidebar-pane {
   border-right: 1px solid var(--sl-color-gray-4) !important;
-  overflow-y: auto !important;
-  scrollbar-gutter: stable;
 }
 .right-sidebar {
   border-left: 1px solid var(--sl-color-gray-4) !important;
-  overflow-y: auto !important;
-  scrollbar-gutter: stable;
+}
+
+/* Fix jumping navigation on scroll by explicitly defining top anchor for fixed sidebars */
+.toc > div,
+.aside .sidebar {
+  top: var(--sl-nav-height) !important;
 }
